--- a/24-065/sections/clause_4_terms_and_definitions.adoc
+++ b/24-065/sections/clause_4_terms_and_definitions.adoc
@@ -1,8 +1,7 @@
+[[cls-4]]
 == Terms and definitions
 
 [.boilerplate]
-=== {blank}
-
 
 For the purposes of this document, the following terms and definitions shall apply.
 Terms not defined here take their meaning from computer science or from their
