--- a/24-065/sections/clause_5_conventions.adoc
+++ b/24-065/sections/clause_5_conventions.adoc
@@ -1,3 +1,4 @@
+[[cls-5]]
 == Conventions
 
 === Symbols (and abbreviated terms)
@@ -12,13 +13,13 @@ available standard (PAS) by ISO in its earlier 1.3 version.
 
 The normative provisions in this standard are denoted by the URI namespace
 
-https://www.opengis.net/spec/modspec/1.1/
+https://www.opengis.net/spec/modspec-2/1.1/
 
 All requirements that appear in this document are denoted by partial URIs which are relative to the namespace shown above.
 
 For the sake of brevity, the use of “req” in a requirement URI denotes:
 
-https://www.opengis.net/spec/modspec/1.1/
+https://www.opengis.net/spec/modspec-2/1.1/
 
 An example might be:
 
@@ -28,7 +29,7 @@ All conformance tests that appear in this document are denoted by partial URIs w
 
 For the sake of brevity, the use of “conf” in a requirement URI denotes:
 
-https://www.opengis.net/spec/modspec/1.1/
+https://www.opengis.net/spec/modspec-2/1.1/
 
 The same convention is used for permissions (per) and recommendations (rec).
 
