--- a/sources/24-066-part3-xml/sections/06-req-class.adoc
+++ b/sources/24-066-part3-xml/sections/06-req-class.adoc
@@ -194,11 +194,11 @@ assertions about the presence or absence of patterns in XML trees. It is a struc
 language expressed in XML using a small number of elements and XPath languages.
 
 This requirements class covers any standard that
-uses Schematron to create patterns or constrains for an XML Schema. 
+uses Schematron to create patterns or constraints for an XML Schema. 
 
 [cols="1,4",width="90%"]
 |===
-2+|*Requirements Class - XML schmeatron extension to the core* 
+2+|*Requirements Class - XML Schematron extension to the core* 
 2+|/req/core/data-representation 
 |Target | ModSpec Conformant XML Model
 |Dependency |OGC ModSpec Version 1.1 (need proper title and document number)
