--- a/sources/sections/00-preface.adoc
+++ b/sources/sections/00-preface.adoc
@@ -21,7 +21,7 @@ OGC ModSpec GitHub repository (https://github.com/opengeospatial/ogc-modspec).
 == Document terms and definitions
 
 This document uses the terms defined in OGC Policy Directive 49, which is based on the ISO/IEC Directives, Part 2, Rules for the structure and drafting of International Standards. 
-In particular, the word “shall” (not “must”) is the verb form used to indicate a requirement to be strictly followed to conform to this ModSPec standard.
+In particular, the word “shall” (not “must”) is the verb form used to indicate a requirement to be strictly followed to conform to this ModSpec standard.
 
 [.preface]
 == Document editors
