--- a/sources/requirements/core/REQ028_reqs-are-in-class.adoc
+++ b/sources/requirements/core/REQ028_reqs-are-in-class.adoc
@@ -5,5 +5,5 @@
 ====
 [%metadata]
 identifier:: /req/core/reqs-are-in-class
-part:: Each requirement in a standard _SHALL_ be associated with exactly one requirements class.
+part:: Each requirement in the standard _SHALL_ be associated with exactly one requirements class.
 ====
