--- a/sources/requirements/core/REQ26_optional-requirements.adoc
+++ b/sources/requirements/core/REQ26_optional-requirements.adoc
@@ -5,5 +5,5 @@
 ====
 [%metadata]
 identifier:: /req/core/optional-requirements
-part:: The only conditional (optional) requirements acceptable in a standard conformant with the ModSpec _SHALL_ be expressible as a list of conformance classes to be passed.
+part:: The only conditional (optional) requirements acceptable in the standard _SHALL_ be expressible as a list of conformance classes to be passed.
 ====
