--- a/sources/abstract_tests/core/ATS20_core-requirements-separate.adoc
+++ b/sources/abstract_tests/core/ATS20_core-requirements-separate.adoc
@@ -4,6 +4,6 @@
 [%metadata]
 identifier:: /conf/core/core-requirements-separate
 target:: /req/core/core-requirements-separate
-test-purpose:: Validate that every standard defines and identifies a core set of requirements as a separate requirements class with a corresponding conformance class.
+test-purpose:: Validate that the standard defines and identifies a core set of requirements as a separate requirements class with a corresponding conformance class.
 test-method:: Inspect the document to verify the above.
 ====
