--- a/sources/abstract_tests/core/ATS21_general-recommendations-core.adoc
+++ b/sources/abstract_tests/core/ATS21_general-recommendations-core.adoc
@@ -4,6 +4,6 @@
 [%metadata]
 identifier:: /conf/core/general-recommendations-core
 target:: /req/core/general-recommendations-core
-test-purpose:: Validate that all general recommendations for a standard are in the core.
+test-purpose:: Validate that all general recommendations for the standard are in the core.
 test-method:: Inspect the document to verify the above.
 ====
