--- a/sources/abstract_tests/core/ATS25_restriction-of-extensions.adoc
+++ b/sources/abstract_tests/core/ATS25_restriction-of-extensions.adoc
@@ -4,6 +4,6 @@
 [%metadata]
 identifier:: /conf/core/restriction-of-extensions
 target:: /req/core/restriction-of-extensions
-test-purpose:: Validate that a standard conformant to the ModSpec never restricts in any manner future, logically valid extensions of its standardization target types.
+test-purpose:: Validate that the standard never restricts in any manner future, logically valid extensions of its standardization target types.
 test-method:: Inspect the document to verify the above.
 ====
