--- a/sources/requirements/core/REQ23_core-and-extensions.adoc
+++ b/sources/requirements/core/REQ23_core-and-extensions.adoc
@@ -5,5 +5,5 @@
 ====
 [%metadata]
 identifier:: /req/core/core-and-extensions
-part:: Each standard conformant to the ModSpec _SHALL_ consist of a core and some number of requirements classes defined as extensions to that core.
+part:: The standard _SHALL_ define and identify a core set of requirements as a separate requirements class with a corresponding conformance class.
 ====
