--- a/sources/requirements/requirements_class_core.adoc
+++ b/sources/requirements/requirements_class_core.adoc
@@ -4,7 +4,7 @@
 ====
 [%metadata]
 identifier:: https://www.opengis.net/spec/modspec-1/1.1/req/req-class-core
-target-type:: Modular Standard
+target-type:: Standard
 requirement:: /req/core/reqs-are-testable
 requirement:: /req/core/all-components-assigned-uri
 requirement:: /req/core/vocabulary-and-parent-req-class
