--- a/sources/sections/04-terms-and-defs.adoc
+++ b/sources/sections/04-terms-and-defs.adoc
@@ -12,68 +12,75 @@ Many of these definitions depend upon the model given in <<annex-C,Annex C: ModS
 
 === Building Blocks Terms and Definitions
 
-[[BuildingBlock-definition]]
+[[buildingblock-definition]]
 
-==== Building Block
+==== building block
 
-a <<RequirementsClass-definition,requirements class>> or a <<RequirementsModule-definition,requirements module>> with no direct dependencies on other requirements classes or modules and their associated <<ConformanceClass-definition,conformance test class>> or <<ConformanceModule-definition,conformance test module>>. 
+<<requirementsclass-definition,requirements class>> or <<requirementsmodule-definition,requirements module>> with no direct dependencies on other requirements classes or modules and their associated <<conformanceclass-definition,conformance test class>> or <<conformancemodule-definition,conformance test module>> 
 
-[[Dependency-definition]]
+[[dependency-definition]]
 
-==== Dependency 
+==== dependency 
 
-a module (the target) which is used by, produced by, or associated with an implementation of the source module. 
+module (the target) which is used by, produced by, or associated with an implementation of the source module 
 
-[[DirectDependency-definition]]
+[[directdependency-definition]]
 
-==== Direct Dependency
+==== direct dependency
 
 another requirements class (the dependency) whose requirements are defined to also be requirements of this requirements class
 
 NOTE: A direct dependency (of a requirements class) of the current requirements class will have the same standardization target as the current requirements class. This is another ways of saying that the current requirements class extends, or uses all the aspects of the direct dependency (or a requirements class). Any tests associated with this dependency can be applied to this requirements class. 
 
-When testing a direct dependency of a requirements class, the standardization target is directly subject to the test in the specified conformance test class of the direct dependency of a requirements class.  
+NOTE: When testing a direct dependency of a requirements class, the standardization target is directly subject to the test in the specified conformance test class of the direct dependency of a requirements class.  
 
-[[Extension-definition]]
+[[extension-definition]]
 
-==== Extension
+==== extension
 
 requirements class which has a direct dependency on another requirements class 
 
 NOTE: Here an extension of a requirements class is defined in the model on requirements class so that their implementation 
 may be software extensions in a manner analogous to the extension relation between the requirements classes.  
 
-[[IndirectDependency-definition]]
+[[indirectdependency-definition]]
 
-==== Indirect Dependency
+==== indirect dependency
 
 requirements class with a different standardization target which is used by, produced by, or associated with the implementation of this requirements class 
 
 NOTE: In this instance, as opposed to the direct dependency of a requirements class, the test against the consumable or product used or produced by the requirements class does not directly test the requirements class, but tests only its side effects. Hence, a particular type of feature service could be required to produce valid XML documents, but the test of validity for the XML document is not directly testing the service, but only indirectly testing the validity of its output. Direct dependencies test the same standardization target, but indirect dependencies test related but different standardization targets. +
 For example, if a DRM-enabled service is required to have an association to a licensing service, then the requirements of a licensing service are indirect requirements for the DRM-enabled service. Such a requirement may be stated as the associated licensing service has a certificate of conformance of a particular kind.  
 
-[[Module-definition]]
+[[module-definition]]
 
-==== Module
+==== module
 
 each of a set of standardized parts or independent units that can be used to construct a more complex structure
 
-Note: The concept ‘module’ is key to the ModSpec structure and model. Modules have a direct relationship to the concept of building blocks. 
+NOTE: The concept ‘module’ is key to the ModSpec structure and model. Modules have a direct relationship to the concept of building blocks. 
 The power of the concept is that modules can be reused in different systems (specify once, use many). Modules can be imported from other programs. 
 Modules can be replaced without affecting the rest of the system. 
 
-[[Part-definition]]
+[[part-document-definition]]
 
-==== Part
+==== part (standard)
 
-there are two cases for the concept `part` as used in this document:
+document which is one of the many documents which make up a multi-part standard.
 
-- The standards document is physically structured into a `core` and additional parts where each part is a separate document. These parts may be extensions to the core or have a different standardization target type/subtype.
-- For clarity, a requirement specifies more than one normative statement. The requirement parts are co-dependent. An example is <<req-1>> of this document.
+NOTE: A multi-part standard is physically structured into a `core` and additional parts where each part is a separate document. These parts may be extensions to the core or have a different standardization target type/subtype.
 
-[[Profile-definition]]
+[[part-requirement-definition]]
 
-==== Profile
+==== part (requirement)
+
+normative statement which together with other normative statements constitute a requirement. 
+
+NOTE: The requirement parts are co-dependent. 
+
+[[profile-definition]]
+
+==== profile
 
 specification or standard consisting of a set of references to one or more base standards and/or other profiles, and the identification of any chosen conformance test classes, conforming subsets, options and parameters of those base standards, or profiles necessary to accomplish a particular function. 
 
@@ -85,40 +92,40 @@ This means that a standardization target being conformant to a profile implies t
 
 === Document Terms and Definitions
 
-[[BestPractice-definition]]
+[[bestpractice-definition]]
 
-==== Best Practice
+==== best practice
 
-a <<Specification-definition,specification>> that has been approved by a legitimate Standards Body as a recommendation for implementation.  
+<<specification-definition,specification>> that has been approved by a legitimate Standards Body as a recommendation for implementation.  
 
-[[CertificateOfConformance-definition]]
+[[certificateofconformance-definition]]
 
-==== Certificate Of Conformance
+==== certificate of conformance
 
 evidence of conformance to all or part of a standard, awarded for passing one or more of the conformance test classes specified in that standard 
 
 NOTE:  Certificates do not have to be instantiated documents. Having proof of passing the conformance test class is sufficient. For example, the OGC currently keeps an online list of conformant applications at http://www.opengeospatial.org/resource/products. 
 Each certificate of conformance is awarded to a standardization target.
 
-[[InformativeStatement-definition]]
+[[informativestatement-definition]]
 
-==== Informative Statement
+==== informative statement
 
 expression in a document conveying non-normative information
 
 NOTE: Includes all statements in a document not part of the normative requirements, recommendations, permissions, or conformance tests. Included for completeness. 
 
-[[NormativeStatement-definition]]
+[[normativestatement-definition]]
 
-==== Normative Statement
+==== normative statement
 
 expression in a document conveying information required to define conformance
 
 NOTE:  Includes all normative statements in a document including requirements, recommendations, permissions, and conformance tests. Included for completeness. 
 
-[[Specification-definition]]
+[[specification-definition]]
 
-==== Specification
+==== specification
 
 document containing recommendations, requirements, permissions, and conformance tests
 
@@ -126,102 +133,100 @@ NOTE:  This definition is included for completeness.
 
 NOTE:  In the OGC, there are Abstract Specifications and Implementation Standards. Abstract Specifications may of may not be testable. Further, Abstract Specifications may not be directly implementable. Implementation Standards are always testable and contain a conformance test suite. 
 
-[[Standard-definition]]
+[[standard-definition]]
 
-==== Standard
+==== standard
 
-a <<Specification-definition,specification>> that has been approved by a legitimate Standards Body 
+<<specification-definition,specification>> that has been approved by a legitimate Standards Body 
 
 NOTE:  This definition is included for completeness. Standard and specification can apply to the same document. While specification is always valid, standard only applies after the adoption of the document by a legitimate standards organization.  
 
 NOTE:  A standard should consist primarily of Normative Statements. The goal should be for the standard to be concise. Supporting information can be provided through a user's guide. 
 
-[[Statement-definition]]
+[[statement-definition]]
 
-==== Statement
+==== statement
 
 expression in a document conveying information 
 
-[[UsersGuide-definition]]
+[[usersguide-definition]]
 
-==== Users Guide
+==== users guide
 
-Non-normative information that assists in understanding a standard but is not required to implement the standard.   
+non-normative information that assists in understanding a standard but is not required to implement the standard.   
 
 === Core Terms and Definitions
 
-[[ConformanceClass-definition]]
+[[conformanceclass-definition]]
 
-==== Conformance Class
+==== conformance class +
+conformance test class
 
-a set of <<ConformanceTest-definition,conformance tests>> that must be passed to receive a single <<CertificateOfConformance-definition,certificate of conformance>>
+set of <<conformancetest-definition,conformance tests>> that must be passed to receive a single <<certificateofconformance-definition,certificate of conformance>>
 
-NOTE:  When no ambiguity is possible, the word test may be left out, so conformance test class may be called a conformance class. +
-In the ModSpec, the set of <<Requirement-definition,requirements>> tested by the conformance tests within a <<ConformanceClass-definition,conformance class>> is a <<RequirementsClass-definition,requirements class>> and its dependencies. Optional requirements will be in a separate requirements class with other requirements that are part of the same option. Each requirements class corresponds to a separate conformance class +
-Each requirements class will be in a 1 to 1 correspondence to a similarly named conformance class that tests all of the requirements in the requirements class. +
-All requirements in a requirements class will have the same standardization target type.  
+[[conformancemodule-definition]]
 
-[[ConformanceModule-definition]]
+==== conformance module
 
-==== Conformance Module
+set of related conformance classes and their associated components. 
 
-a set of related conformance classes and their associated components. 
+[[conformancesuite-definition]]
 
-[[ConformanceSuite-definition]]
+==== conformance suite
 
-==== Conformance Suite
+set of <<conformanceclass-definition,conformance classes>> and/or <<conformancemodule-definition,conformance modules>> that define <<conformancetest-definition,tests>> for all <<requirement-definition,requirements>> of a <<standard-definition,standard>>
 
-set of <<ConformanceClass-definition,conformance classes>> and/or <<ConformanceModule-definition,conformance modules>> that define <<ConformanceTest-definition,tests>> for all <<Requirement-definition,requirements>> of a <<Standard-definition,standard>>
+NOTE:  The *conformance suite* is the union of all *conformance classes* and their associated <<conformanceclass-definition,conformance classes>>. It is by definition the *conformance class* of the entire *standard* or *abstract specification*.  
 
-NOTE:  The *conformance suite* is the union of all *conformance classes* and their associated <<ConformanceClass-definition,conformance classes>>. It is by definition the *conformance class* of the entire *standard* or *abstract specification*.  
+[[conformancetest-definition]]
 
-[[ConformanceTest-definition]]
+==== conformance test
 
-==== Conformance Test
+test, abstract or real, of one or more <<requirement-definition,requirements>> contained within a standard, or set of standards  
 
-test, abstract or real, of one or more <<Requirement-definition,requirements>> contained within a standard, or set of standards  
+[[conformancetestmethod-definition]]
 
-[[ConformanceTestMethod-definition]]
+==== conformance test method
 
-==== Conformance Test Method
+process used to test an implementation of the standard for conformance. 
 
-how an implementation of the standard is tested for conformance. Testing may be automated, manual, or a hybrid.
+NOTE: Testing may be automated, manual, or a hybrid.
 
 NOTE: Testing by an independent second party is recommended.
 
-[[CoreRequirementsClass-definition]]
+[[corerequirementsclass-definition]]
 
-==== Core Requirements Class
+==== core requirements class
 
 unique requirements class that must be satisfied by any conformant standardization targets associated with the standard
 
 NOTE:  The core requirements class is unique because if it were possible to have more than one, then each core would have to be implemented to pass any conformance test class, and thus would have to be contained in any other core. The core may be empty, or all or part of another standard or related set of standards. 
 
-The core can refer to this requirements class, its associated conformance test class, or the software module that implements that requirements class.  
+NOTE: The core can refer to this requirements class, its associated conformance test class, or the software module that implements that requirements class.  
 
-[[Model-definition]]
+[[model-definition]]
 
-==== Model
+==== model
 
-A representation of those aspects of the standardization target type which are to be governed by a standard. The model captures both the conceptual and logical properties of the standardization target type. The requirements promulgated by a standard should be expressed in terms of those conceptual and logical properties.
+representation of those aspects of the standardization target type which are to be governed by a standard. The model captures both the conceptual and logical properties of the standardization target type. The requirements promulgated by a standard should be expressed in terms of those conceptual and logical properties.
 
 In short, the model provides the vocabulary for expressing requirements. 
 
-[[Permission-definition]]
+[[permission-definition]]
 
-==== Permission
+==== permission
 
-expression, in the content of a <<Standard-definition,standard>>, that conveys consent or liberty (or opportunity) to do something
+expression, in the content of a <<standard-definition,standard>>, that conveys consent or liberty (or opportunity) to do something
 
 [ISO Directives Part 2] 
 
 NOTE:: uses “may” and is used to prevent a requirement from being “over interpreted” and as such is considered to be more of a “statement of fact” rather than a “normative” condition. 
 
-[[Recommendation-definition]]
+[[recommendation-definition]]
 
-==== Recommendation
+==== recommendation
 
-expression, in the content of a <<Standard-definition,standard>>, that conveys a suggested possible choice or course of action deemed to be particularly suitable without necessarily mentioning or excluding others.
+expression, in the content of a <<standard-definition,standard>>, that conveys a suggested possible choice or course of action deemed to be particularly suitable without necessarily mentioning or excluding others.
 
 NOTE:: In the negative form, a recommendation is the expression that a suggested possible choice or course of action is not preferred but it is not prohibited.
 
@@ -232,49 +237,51 @@ NOTE:  Although using normative language, a recommendation is not a requirement.
 NOTE:  Recommendations are not tested and therefore have no related conformance test.
 
 
-[[Requirement-definition]]
+[[requirement-definition]]
 
-==== Requirement
+==== requirement
 
-expression, in the content of a <<Standard-definition,standard>>, that conveys objectively verifiable criteria to be fulfilled and from which no deviation is permitted if conformance with the document is to be claimed.
+expression, in the content of a <<standard-definition,standard>>, that conveys objectively verifiable criteria to be fulfilled and from which no deviation is permitted if conformance with the document is to be claimed.
 [ISO Directives Part 2] 
 
-NOTE:  Each requirement is a normative criterion for a single type of <<StandardizationTarget-definition,standardization target>>. In the ModSpec, requirements are associated to <<ConformanceTest-definition,conformance tests>> that can be used to prove compliance to the underlying criteria by the standardization target. The implementation of a requirement is dependent on the type of standard being written. A data standard requires data structures, but a procedural standard requires software implementations. The view of a standard in terms of a set of testable requirements supports using set descriptions of both the standard and its implementations.
+NOTE:  Each requirement is a normative criterion for a single type of <<standardizationtarget-definition,standardization target>>. In the ModSpec, requirements are associated to <<conformancetest-definition,conformance tests>> that can be used to prove compliance to the underlying criteria by the standardization target. The implementation of a requirement is dependent on the type of standard being written. A data standard requires data structures, but a procedural standard requires software implementations. The view of a standard in terms of a set of testable requirements supports using set descriptions of both the standard and its implementations.
 The specification of a requirement is usually expressed in terms of a model of the standardization target type, such as a UML model, or an XML, JSON or SQL schema. Anything without a defined test is a-priori not testable and thus would be better expressed as a recommendation. Requirements use normative language and in particular are commands and use the imperative "shall" or similar imperative constructs. Statements in standards which are not requirements and need to be either conditional or future tense normally use "will" and should not be confused with requirements that use "shall" imperatively  
 
-[[RequirementsClass-definition]]
+[[requirementsclass-definition]]
 
-==== Requirements Class
+==== requirements class
 
-an aggregate of <<Requirement-definition,requirements>> with a single <<StandardizationTargetType-definition,standardization target type>> that must all be satisfied to pass a <<ConformanceClass-definition,conformance test Class>>.
+aggregate of <<requirement-definition,requirements>> with a single <<standardizationtargettype-definition,standardization target type>> that must all be satisfied to pass a <<conformanceclass-definition,conformance test Class>>.
 
-NOTE:  There is some confusion possible here, since the testing of <<IndirectDependency-definition,indirect dependencies>> seems to violate this definition. But the existence of an indirect dependency implies that the test is actually a test of the existence of the relationship from the original target to something that has a property (satisfies a condition or requirement from another requirements class).  
+NOTE:  There is some confusion possible here, since the testing of <<indirectdependency-definition,indirect dependencies>> seems to violate this definition. But the existence of an indirect dependency implies that the test is actually a test of the existence of the relationship from the original target to something that has a property (satisfies a condition or requirement from another requirements class).  
 
-[[RequirementsModule-definition]]
+[[requirementsmodule-definition]]
 
-==== Requirements Module
+==== requirements module
 
-a set of related requirement classes and their associated components. 
+set of related requirement classes and their associated components. 
 
-[[StandardizationGoal-definition]]
+[[standardizationgoal-definition]]
 
-==== Standardization Goal
+==== standardization goal
 
-a concise statement of the problem that the standard helps address and the strategy envisioned for achieving a solution. This strategy typically identifies real-world entities that need to be modified or constrained. At the abstract level, those entities are the <<StandardizationTargetType-definition,Standardization Target Types>>.  
+concise statement of the problem that the standard helps address and the strategy envisioned for achieving a solution. 
 
-[[StandardizationTarget-definition]]
+NOTE: This strategy typically identifies real-world entities that need to be modified or constrained. At the abstract level, those entities are the <<standardizationtargettype-definition,Standardization Target Types>>.  
 
-==== Standardization Target
+[[standardizationtarget-definition]]
 
-entity to which some <<Requirement-definition,requirements>> of a <<Standard-definition,standard>> apply
+==== standardization target
+
+entity to which some <<requirement-definition,requirements>> of a <<standard-definition,standard>> apply
 
 NOTE:   The standardization target is the entity which may receive a certificate of conformance for a requirements class.  
 
-[[StandardizationTargetType-definition]]
+[[standardizationtargettype-definition]]
 
-==== Standardization Target Type
+==== standardization target type
 
-type of entity or set of entities to which the <<Requirement-definition,requirement>> of a <<Standard-definition,standard>> apply
+type of entity or set of entities to which the <<requirement-definition,requirement>> of a <<standard-definition,standard>> apply
 
 NOTE:  For example, the standardization target type for The OGC API – Features Standard are Web APIs. The standardization target type for the CDB Standard is “datastore”. It is important to understand that a standard’s root standardization target type can have sub-types, and that there can be a hierarchy of target types. For example, a Web API can have sub types of client, server, security, and so forth. As such, each requirements class can have a standardization target type that is a sub-type of the root. 
 
