--- a/sources/sections/04-terms-and-defs.adoc
+++ b/sources/sections/04-terms-and-defs.adoc
@@ -88,7 +88,7 @@ NOTE:  In the usage of the ModSpec, a profile is a set of requirements classes o
 
 This means that a standardization target being conformant to a profile implies that the same target is conformant to the standards referenced in the profile.
 
-[ISO/IEC TR 10000-1]    
+SOURCE: ISO/IEC TR 10000-1    
 
 === Document Terms and Definitions
 
@@ -218,7 +218,7 @@ In short, the model provides the vocabulary for expressing requirements.
 
 expression, in the content of a <<standard-definition,standard>>, that conveys consent or liberty (or opportunity) to do something
 
-[ISO Directives Part 2] 
+SOURCE: ISO Directives Part 2 
 
 NOTE:: uses “may” and is used to prevent a requirement from being “over interpreted” and as such is considered to be more of a “statement of fact” rather than a “normative” condition. 
 
@@ -230,7 +230,7 @@ expression, in the content of a <<standard-definition,standard>>, that conveys a
 
 NOTE:: In the negative form, a recommendation is the expression that a suggested possible choice or course of action is not preferred but it is not prohibited.
 
-[ISO Directives Part 2] 
+SOURCE: ISO Directives Part 2 
 
 NOTE:  Although using normative language, a recommendation is not a requirement. The usual form replaces the `shall` (imperative or command) of a requirement with a `should` (suggestive or conditional). 
 
