--- a/sources/sections/07-mapping.adoc
+++ b/sources/sections/07-mapping.adoc
@@ -13,7 +13,8 @@ alternate mechanism.
 
 Standards are often structured and documented using some form of modeling language, or
 implementation paradigm. Additional Parts to the ModSpec
-define a mechanism to map parts of the model (language, schema, etc.) to the
+define a mechanism to map parts of the model (language, schema, etc.) to the conformance classes 
+used as the ModSpec model from Clause 6.1.
 
 As suggested in Clause <<req-22>>, the structure of the normative clauses in a
 standard should parallel the structure of the conformance test classes in
