--- a/sources/sections/06-fundamentals.adoc
+++ b/sources/sections/06-fundamentals.adoc
@@ -20,7 +20,10 @@ These characteristics are slightly modified from the Open Group definitions to a
 
 === Standardization Context - Goals, Target Types, and Targets
 
-Every standards document should include a Standardization Goal. This is a concise statement of the problem that the standard helps address and the strategy envisioned for achieving a solution.  This strategy typically identifies real-world entities that need to be modified or constrained.  At the abstract level, those entities are the Standardization Target Types.  These are the classes of entities to be standardized. A Standard defines the requirements levied on one or more Standardization Target Types. 
+Every standards document should include a Standardization Goal. This is a concise statement of the problem that the 
+standard helps address and the strategy envisioned for achieving a solution.  This strategy typically identifies real-world 
+entities that need to be modified or constrained.  At the abstract level, those entities are the Standardization Target Types.  
+These are the classes of entities to be standardized. A Standard defines the requirements levied on one or more Standardization Target Types. 
 
 Instances of a Standardization Target Type are the Standardization Targets.  These are the real-world manifestations of the Standardization Target Type.  In summary:
 
@@ -114,7 +117,7 @@ the numbered Clauses.
 . All requirements are identifiable as requirements. 
 . All requirements in a document are uniquely numbered and/or labeled.
 . All tests for conformance to those requirements are defined in the Conformance Test Suite.
-. Tests are grouped for convenience into conformance test classes and if desired the classes are grouped into conformance test modules.
+. Tests are grouped for convenience into conformance test classes and if desired the classes are grouped into conformance test packages.
 . The tests, if conducted, determine to some degree of certainty whether an
 implementation meets the requirements which the tests reference.
 . The tests are organized into some number of conformance "classes" where each conformance class has a one to one relationship with a requirements class. If a standard
