--- a/sources/mod-spec-user-guide/sections/02-informative.adoc
+++ b/sources/mod-spec-user-guide/sections/02-informative.adoc
@@ -65,8 +65,8 @@ The following are two examples of Target Types and Targets as used in the OGC AP
 
 === OGC Identifiers
 
-ModSpec Requirement 2 states, "Each component of a standard, including requirements, requirements modules, requirements classes, conformance tests 
-conformance modules, and conformance test classes SHALL be assigned a unique identifier and/or label." OGC Policy 
+ModSpec Requirement 2 states, "Each component of a standard, including requirements, requirements packages, requirements classes, conformance tests 
+conformance packages, and conformance test classes SHALL be assigned a unique identifier and/or label." OGC Policy 
 Directive https://portal.ogc.org/public_ogc/directives/directives.php#33[33] specifies that such identifiers are URIs and `SHALL` 
 be structured per the rules specified in the OGC Naming Authority policy doucment https://docs.ogc.org/pol/10-103r1.html[OGC Name Type Specification - specification elements]
 
